# Agent_Speak

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-TW.md  compose.gpu.yaml  compose.yaml  pyproject.toml  run.sh
AI_Avatar/: AGENTS.md  README.md
AI_Avatar/config/: animation_manifest.json  expressions.json  interpolation_providers.json  runtime_config.json  state_transition_map.json  verified_asset_inventory.json  viseme_map.json
AI_Avatar/data/: action_catalog.json  asset_index.json  state_catalog.json
AI_Avatar/docs/: design_Henry_AI_Avatar.md  gif_sprite_architecture.md  react_integration.md  resource_generation_workflow.md
AI_Avatar/schemas/: animation_manifest.schema.json  asset_inventory.schema.json  avatar_event.schema.json  state_transition_map.schema.json
AI_Avatar/scripts/: README.md
AI_Avatar/tests/: README.md
AI_Avatar/tools/: build_avatar_assets.py  film_pair_cli.py  setup_interpolation_models.sh
docker/: entrypoint.sh
docs/: OPENAPI_QUICKSTART_ZH_TW.md
frontend/realtime/: avatar.html  index.html  package-lock.json  package.json  tsconfig.json  (+5 more)
scripts/: bootstrap_models.py  capture_readme_screenshots.sh  health_smoke.sh  mic_smoke.sh  patch_vllm_omni_voxcpm2.py  run.sh  run_mcp.sh  setup.sh  smoke_api.sh  status.sh  tailscale_https.sh  test.sh
spec/: API.md  ARCHITECTURE.md  PROJECT_MAP.md  RUNTIME.md  SKILL_AND_MCP.md  TESTING.md  UI.md  agent.md  map.md  project_herness.md
tests/: __init__.py  audio_fixtures.py  codex_recorder_core.test.js  particle_field.test.js  portal_locale.test.js  test_accelerators.py  test_app.py  test_asr_model_manager.py  test_asr_providers.py  test_asr_worker.py  test_audio.py  test_contracts.py  test_diagnostic_logging.py  test_docker_runtime.py  test_docs.py  test_mcp_server.py  test_mcp_stdio.py  test_model_bootstrap.py  test_model_control.py  test_operations.py  test_package.py  test_production_providers.py  test_realtime.py  test_realtime_audio.py  test_realtime_endpoint.py  test_realtime_models.py  test_realtime_queue.py  test_realtime_websocket.py  test_remote_asr.py  test_resource_api.py  test_resource_state.py  test_resource_supervisor.py  test_resource_types.py  test_sessions_pipeline.py  test_speakers.py  test_stage_api.py  test_text_inference.py  test_transcripts.py  test_tts_clone.py  test_tts_clone_api.py  (+2 more)
web/: app.css  app.js  codex-recorder-core.js  codex.css  codex.html  codex.js  docs-locale.css  docs-locale.js  index.html  locale.js  particle-field.js
(+225 files in other folders)
