[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-speak"
version = "0.1.0"
description = "Local-first voice agent gateway"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "uvicorn>=0.32,<1",
  "websockets>=14,<17",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
