[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-speak"
version = "0.1.1"
description = "Local-first voice agent gateway"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "uvicorn>=0.32,<1",
  "websockets>=14,<17",
  "faster-whisper>=1.2,<2",
  "piper-tts>=1.3,<2",
  "mcp>=1.20,<2",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<10",
]

[project.scripts]
agent-speak-mcp = "agent_speak.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
