[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-speak"
version = "0.1.1"
description = "Local-first voice agent gateway"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "uvicorn>=0.32,<1",
  "websockets>=14,<17",
  "piper-tts>=1.3,<2",
  "mcp>=1.20,<2",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "onnxruntime>=1.20,<2",
  "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<10",
  "pyyaml>=6,<7",
]
gpu = [
  "nvidia-cublas-cu12>=12,<13",
  "nvidia-cudnn-cu12>=9,<10",
]
models = [
  "huggingface-hub>=0.30,<2",
]
asr = [
  "accelerate>=1.2,<2",
  "faster-whisper>=1.2,<2",
  "librosa>=0.10,<1",
  "qwen-asr>=0.0.5,<1",
  "soundfile>=0.12,<1",
  "torch>=2.6,<2.8",
  "transformers>=4.57,<5",
]

[project.scripts]
agent-speak-mcp = "agent_speak.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
